force-app/main/default/objects/Business_Plan__c/Business_Plan__c.object-meta.xml
<CustomObject>
    <label>Business Plan</label>
    <nameField>
        <label>Business Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>