force-app/main/default/objects/Business_Plan__c/fields/Account_Base_Marketing_plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Base_Marketing_plan__c</fullName>
    <label>Account Base Marketing plan</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>