force-app/main/default/objects/Business_Plan__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>