force-app/main/default/objects/Business_Plan__c/fields/Actual_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Actual_Consumption__c</fullName>
    <label>Actual Consumption</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>