force-app/main/default/objects/Business_Plan__c/fields/Actual_Revenue_to_Simetrik__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_to_Simetrik__c</fullName>
    <label>Actual Revenue to Simetrik</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>