force-app/main/default/objects/Business_Plan__c/fields/Automatic_reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Automatic_reconciliation__c</fullName>
    <label>Automatic reconciliation</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>