force-app/main/default/objects/Business_Plan__c/fields/Business_Case_based_on_new_use_cases__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_based_on_new_use_cases__c</fullName>
    <label>Business Case based on new use cases</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>