force-app/main/default/objects/Business_Plan__c/fields/carbon_footprint_reduction__c.field-meta.xml
<CustomField>
    <fullName>carbon_footprint_reduction__c</fullName>
    <label>carbon footprint reduction</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>