force-app/main/default/objects/Business_Plan__c/fields/Company_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Company_Highlights__c</fullName>
    <label>Company Highlights</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>