force-app/main/default/objects/Business_Plan__c/fields/errors_risks_identified__c.field-meta.xml
<CustomField>
    <fullName>errors_risks_identified__c</fullName>
    <label># errors/risks identified</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>