force-app/main/default/objects/Business_Plan__c/fields/Follow_up_Framework__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Framework__c</fullName>
    <label>Follow up Framework</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>