force-app/main/default/objects/Business_Plan__c/fields/Highlights_News__c.field-meta.xml
<CustomField>
    <fullName>Highlights_News__c</fullName>
    <label>Highlights / News</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>