force-app/main/default/objects/Business_Plan__c/fields/Hypothesis_new_use_cases__c.field-meta.xml
<CustomField>
    <fullName>Hypothesis_new_use_cases__c</fullName>
    <label>Hypothesis new use cases</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>