force-app/main/default/objects/Business_Plan__c/fields/Key_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Key_Challenges__c</fullName>
    <label>Key Challenges:</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>