force-app/main/default/objects/Business_Plan__c/fields/Measures_of_success__c.field-meta.xml
<CustomField>
    <fullName>Measures_of_success__c</fullName>
    <label>Measures of success:</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>