force-app/main/default/objects/Business_Plan__c/fields/Next_Action_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_s_Date__c</fullName>
    <label>Next Action´s Date</label>
    <type>Date</type>
</CustomField>