force-app/main/default/objects/Business_Plan__c/fields/Number_of_Use_Cases_implemented__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Use_Cases_implemented__c</fullName>
    <label>Number of Use Cases implemented.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>