force-app/main/default/objects/Business_Plan__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <label>Objectives:</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>