force-app/main/default/objects/Business_Plan__c/fields/of_implementation__c.field-meta.xml
<CustomField>
    <fullName>of_implementation__c</fullName>
    <label>% of implementation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>