force-app/main/default/objects/Business_Plan__c/fields/Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>