force-app/main/default/objects/Business_Plan__c/fields/Productivity_increase__c.field-meta.xml
<CustomField>
    <fullName>Productivity_increase__c</fullName>
    <label>Productivity increase</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>