force-app/main/default/objects/Business_Plan__c/fields/Reduction_in_FTE_invested_time__c.field-meta.xml
<CustomField>
    <fullName>Reduction_in_FTE_invested_time__c</fullName>
    <label>Reduction in FTE (invested time)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>