force-app/main/default/objects/Business_Plan__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria:</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>