force-app/main/default/objects/Business_Plan__c/fields/Success_Plan_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Success_Plan_Presentation__c</fullName>
    <label>Success Plan - Presentation</label>
    <type>Url</type>
</CustomField>