force-app/main/default/objects/Business_Plan__c/fields/Transactional_volume_month__c.field-meta.xml
<CustomField>
    <fullName>Transactional_volume_month__c</fullName>
    <label>Transactional volume/month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>