force-app/main/default/objects/Business_Plan__c/fields/Upsell_Road_Map_to_close__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Road_Map_to_close__c</fullName>
    <label>Upsell Road Map to close</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>