force-app/main/default/objects/Business_Plan__c/fields/Value_Map__c.field-meta.xml
<CustomField>
    <fullName>Value_Map__c</fullName>
    <label>Value Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>